# FunctionGemmaForAndroid

./: .gitignore  FunctionGemma_KVCache_Optimization.md  FunctionGemma_KVCache_Optimization.zh-CN.md  README.md  README.zh-CN.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gemma/functiongemma/: ChatTemplateBuilder.java  CppInferenceEngine.java  GemmaInference.java  InferenceEngine.java  ManualBPETokenizer.java  MergeRule.java  Tokenizer.java  TokenizerJsonParser.java
app/src/main/java/com/gemma/functiongemma/android/: AppAliasEntry.java  AppAliasResolver.java  AppAliasStore.java  AssetModelManager.java  BuiltInToolsets.java  FunctionGemmaEngine.java  InstalledAppOption.java  MainActivity.java  PrefixCacheEntry.java  PrefixCacheIndexStore.java  PrefixCacheStatus.java  ToolCall.java  ToolCallFallbackResolver.java  ToolCallParser.java  ToolCallResolution.java  ToolExecutionGuard.java  ToolExecutionResult.java  ToolExecutor.java  ToolsetDefinition.java  ToolsetFingerprint.java  ToolsetStore.java  UserToolsetTemplate.java
app/src/main/jniLibs/: README.md  README.zh-CN.md
app/src/main/res/drawable/: bg_badge_soft.xml  bg_hero_panel.xml  bg_input_surface.xml  bg_main_canvas.xml  bg_output_surface.xml  bg_status_panel.xml  bg_tab_active.xml  bg_tab_inactive.xml  bg_tab_strip.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/gemma/functiongemma/: ChatTemplateBuilderTest.java  TokenizerJsonParserTest.java
app/src/test/java/com/gemma/functiongemma/android/: AppAliasResolverTest.java  PrefixCacheIndexStoreTest.java  ToolCallFallbackResolverTest.java  ToolCallParserTest.java  ToolExecutionGuardTest.java  ToolsetFingerprintTest.java  ToolsetStoreTest.java  UserToolsetTemplateTest.java
main/cpp/: CMakeLists.txt  gemma_inference.cpp  gemma_inference.h
python/: build_gemma.py  read.md  read.zh-CN.md
